Bindings/Ogre/hBuild/include/ClassException.h

// This source file is part of HGamer3D, a project to enable 3D game development 
// in Haskell. For the latest info, see http://www.hgamer3d.org .
// 
// (c) 2011-2014 Peter Althainz
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// 

// ClassException.h

// 

#include "wchar.h"
#ifndef _DEFINED_HG3D_ClassException
#define _DEFINED_HG3D_ClassException

#include "ClassPtr.h"


// 
void ogre_exc_construct(long number_c, char * description_c, char * source_c, struct hg3dclass_struct * result_c);

// Needed for compatibility with std::exception. 
void ogre_exc_destruct(struct hg3dclass_struct * thisclass_c);

// 
void ogre_exc_getFullDescription(struct hg3dclass_struct * thisclass_c, char * result_c);

// 
void ogre_exc_getNumber(struct hg3dclass_struct * thisclass_c, long * result_c);

// 
void ogre_exc_getSource(struct hg3dclass_struct * thisclass_c, char * result_c);

// 
void ogre_exc_getFile(struct hg3dclass_struct * thisclass_c, char * result_c);

// 
void ogre_exc_getLine(struct hg3dclass_struct * thisclass_c, long * result_c);

// 
void ogre_exc_getDescription(struct hg3dclass_struct * thisclass_c, char * result_c);

// Override std::exception::what. 
void ogre_exc_what(struct hg3dclass_struct * thisclass_c, char * result_c);

#endif 